# winghost-rpa

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  chu_logo.py  dev_debug.py  gui.py  install.bat  locator.py  official_log.py  paths.py  pyproject.toml  recorder.py  replayer.py  report_server.py  requirements-build.txt  requirements.txt  run_winmonitor.py  scheduler.py  stats_db.py  trace_log.py  version.py  winghost-monitor.spec  winghost.bat  winghost.spec  winput.py
.github/workflows/: build-windows.yml  ci.yml  sync-to-monitor.yml
tests/: test_smoke.py
tools/: check_version.py
winmonitor/: __init__.py  cli.py  config.py  gui.py
winmonitor/kpi/: __init__.py  baseline.py  chrono.py  dashboard.py  fetch_chartjs.py  store.py
winmonitor/recorder/: __init__.py  listener.py  scenario.py  screenshot.py
winmonitor/replayer/: __init__.py  anchor.py  dpi.py  injector.py  replayer.py
winmonitor/scheduler/: __init__.py  report.py  runner.py
