[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "winghost-rpa"
version = "6.1.0"
description = "Enregistreur / rejoueur RPA Windows avec ancrage visuel OCR, mouvements souris, splash screen, scénarios nommés, log officiel CSV, mode automatique (systray), dashboard web et interface CustomTkinter"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Olivier Bendries", email = "pronoiaque@users.noreply.github.com" }
]
keywords = ["rpa", "automation", "ocr", "pyautogui", "easyocr", "windows", "recorder", "replayer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "easyocr>=1.7.1",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "screeninfo>=0.8.1",
    "flask>=3.0.0",
    "customtkinter>=5.2.0",
    "pywin32>=306",
    "psutil>=5.9.0",
    "pystray>=0.19.4",
]

[project.urls]
Homepage   = "https://github.com/pronoiaque/winghost-rpa"
Repository = "https://github.com/pronoiaque/winghost-rpa"
Changelog  = "https://github.com/pronoiaque/winghost-rpa/blob/main/CHANGELOG.md"
Issues     = "https://github.com/pronoiaque/winghost-rpa/issues"

[project.scripts]
winghost-record = "recorder:main"
winghost-replay = "replayer:main"
winghost-gui    = "gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["winghost*"]
